Migrate runtime and add resolver enrichment
Co-authored-by: tseliger-dedalus-labor <106147154+tseliger-dedalus-labor@users.noreply.github.com>